# wasm-javascript

./: .gitmodules  Cargo.toml  README.md
codegen/: Cargo.toml  Dockerfile  Makefile
codegen/src/: main.rs
wasmtime_js/: Cargo.toml  README.md  build-wasm.sh  code.js
wasmtime_js/examples/: interop.rs
wasmtime_js/src/: lib.rs
wasmtime_js/wasm/: code.wasm  js.wasm
wasmtime_js/wit/: host_api.wit  js_api.wit
wasmtime_js/witx/: host_api.witx  js_api.witx
