[package]
name = "wasmtime_js"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version =  "1.0.44", features = ["backtrace"] }
wasmtime = { version =  "0.30.0", features = ["cache"] }
wasmtime-wasi = "0.30.0"

witx-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/witx-bindgen" }

[dev-dependencies]
serde_json = "1.0.68"
