[package]
name = "wasmtime_js"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.53", features = ["backtrace"] }
wasmtime = { version = "0.33.0", features = ["cache"] }
wasmtime-wasi = "0.33.0"

wit-bindgen-wasmtime = "0.1"

[build-dependencies]
# wit-bindgen-gen-spidermonkey = "0.1"
# wit-bindgen-gen-core = "0.1"
# wizer = "1.3.5"

[dev-dependencies]
serde_json = "1.0.78"

[patch.crates-io]
wit-bindgen-gen-core = { git = "https://github.com/bytecodealliance/wit-bindgen" }
wit-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen" }
wit-bindgen-gen-spidermonkey = { git = "https://github.com/bytecodealliance/wit-bindgen" }
